slice/src/components/sSen/sSen.scss
.sSen {
  $this: &;

  &__head {

  }

  &__res {
    @include padding(30px 0, 56px 0);
    position: relative;

    @keyframes rotate360 {
      to {
        transform: rotate(360deg);
      }
    }

    &:after {
      @include pseudo-block($top: 0, $left: 0);
      width: 100%;
      height: 100%;
      background: rgba($color-blue-1, 0.7);
      z-index: 10;
    }

    &:before {
      @include pseudo-block($top: 100px, $left: 50%);
      margin-left: -50px;
      width: 100px;
      height: 100px;
      background: url("circle05.png");
      background-size: 100% 100%;
      z-index: 11;
      animation: 1s rotate360 infinite linear;
    }

    &:before, &:after {
      display: none;
    }

    &_loading {

      &:before, &:after {
        display: block;
      }
    }

    .sSen__sName-committee-info {
      display: none;
      margin-top: 5px;

      em {
        display: block;
      }
    }

    &_committee {

      .sSen__sName-committee-info {
        display: block;
      }
    }
  }

  &__noRes {
    @include cr-last-child;
    @include padding(100px 0, 50px 0);

    h2 {
      @include font-size(25px, 30px, 45px);
    }
  }

  &__byAdd {
    background: $color-dark-blue-2;
    padding: 0 0 22px;
    text-align: center;

    @include sm {
      padding: 38px 0 22px;
    }

    @include md {
      padding: 22px 0;
    }

    .section__sNav {
      margin-bottom: 0;
    }
  }

  &__btnByAdd {
    display: inline-block;
    line-height: 1.2;
    background: $color-red;
    color: $color-white;
    @include font-size(14px, 16px, 18px);
    font-family: $RobotoCondensed-Light;
    border: 1px solid #3e5376;
    border-radius: 5px;
    text-transform: capitalize;
    text-decoration: none;
    @include padding(8px 12px, 12px 16px);
    transition: background-color .3s;

    &:hover {
      background: $color-dark-blue;
    }

    &:before {
      content: '';
      display: inline-block;
      vertical-align: middle;
      @include width(16px, 20px);
      @include height(22px, 28px);
      background: url('by-address-img-tmp-a.png') no-repeat;
      background-size: contain;
      margin-right: 18px;
    }
  }

  &__fil {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
    border-top: 1px solid #cecece;
    border-bottom: 1px solid #cecece;
    background: #dedede;

    @include sm {
      display: flex;
      flex-wrap: nowrap;
      justify-content: center;
    }
  }

  &__filCol {
    @include padding(10px, 42px 10px 25px);
    background: #dedede;
    text-align: center;
    @include cr-last-child;
    display: flex;
    flex-direction: column;
    min-height: 170px;
    /*max-width: 180px;*/
    min-width: 180px;

    @include sm {
      /*max-width: none;*/
      min-width: 0;
      flex: 1;
      min-height: 250px;
      border-right: 1px solid #cecece;
    }

    &:last-child {
      border-right: none;
      padding-bottom: 40px;

      @include sm {
        padding-bottom: 10px;
      }
    }
  }

  &__zip_actions {
    grid-column: span 2;
    max-width: none;
    min-width: 0;
    width: 100%;
    display: grid;
    grid-template-columns: minmax(0, 188px) 110px;
    align-items: center;
    justify-content: center;
    column-gap: 20px;
    padding-top: 24px;

    @include sm {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      grid-column: auto;
      max-width: 300px;
      width: 300px;
      column-gap: 6px;
      padding-top: 42px;
    }

    .sSen__filIco {
      grid-column: 1;
      justify-self: center;
      width: 100%;
      max-width: 180px;
      margin-bottom: 18px;

      @include sm {
        flex: 0 0 100%;
      }
    }

    .sSen__zipTitle {
      grid-column: 1;
      justify-self: center;
      width: 100%;
      max-width: 180px;
      margin: 0 0 26px;

      @include sm {
        flex: 0 0 100%;
      }
    }

    .f-search {
      grid-column: 1;
      flex: 0 1 188px;
      min-width: 0;
      width: auto;
      max-width: none;
      margin: 0 0 12px;

      .form-item {
        margin: 0;
      }
    }

    .form-actions {
      grid-column: 2;
      flex: 0 0 110px;
      margin: 0 0 12px;
      display: flex;
      align-items: center;
    }

    .form-submit {
      width: 100%;
      box-sizing: border-box;
      display: inline-flex;
      justify-content: center;
      align-items: center;
    }
  }

  &__filIco {
    height: 60px;
    max-width: 100px;
    margin: 0 auto 5px;
    display: flex;
    align-items: center;
    justify-content: center;

    img {
      max-height: 100%;
      height: auto;
    }
  }

  &__filTitle, label {
    display: block;
    font-family: $RobotoCondensed-Regular;
    @include font-size(14px, 14px, 14px);
    color: $color-blue;
    text-transform: uppercase;
    margin: 0 0 12px;
    @include cr-last-child;
  }

  &__zipTitle {
    display: block;
    font-family: $RobotoCondensed-Regular;
    @include font-size(14px, 14px, 14px);
    color: $color-blue;
    text-transform: uppercase;
  }

  &__opt, .js-form-type-select {
    width: 100%;
    max-width: 160px;
    @include margin(0 auto 10px, 0 auto 5px);

    .select2-container {
      width: 100%;
    }
  }

  &__filLink {
    margin: 20px 0;

    @include sm {
      margin: auto 0 0;
    }

    a {
      font-family: $RobotoCondensed-Bold;
      font-size: 14px;
      color: $color-red;
      text-transform: uppercase;
      text-decoration: none;
      padding: 10px;
      border-radius: 5px;

      &:focus,
      &:focus-visible,
      &:focus-within {
        color: $color-white;
      }
      &:hover {
        opacity: .5;
      }
    }
  }

  &__senShow {
    text-align: center;
    overflow: hidden;
    @include margin(0 0 30px, 0 0 50px);

    &-count {
      font-family: $RobotoCondensed-Light;
      font-size: 18px;
      color: $color-blue;
      margin: 0;
      padding: 0 8px;
      display: inline-block;
      position: relative;

      &:before, &:after {
        @include pseudo-block($top: 50%, $left: 100%);
        border-top: 1px solid #dedede;
        width: 100vw;
      }

      &:before {
        left: auto;
        right: 100%;
      }
    }
  }

  &__itemsWraps {
    @include margin-bottom(30px, 50px);
    @include cr-last-item;
    @include cr-last-child;
  }

  &__itemsWrap {
    margin-bottom: 28px;
  }

  &__items {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-right: -15px;
    margin-left: -15px;

    margin-bottom: -20px;

    @include sm {
      margin-right: -28px;
      margin-left: -28px;

      margin-bottom: -50px;
    }
  }

  &__item {
    max-width: 140px;
    min-width: 140px;
    margin-right: 15px;
    margin-left: 15px;
    margin-bottom: 20px;
    text-align: center;

    @include sm {
      max-width: 196px;
      min-width: 196px;
      margin-right: 28px;
      margin-left: 28px;
      margin-bottom: 50px;
    }
  }

  &__sLink {
    text-decoration: none;
    display: block;
    /*padding-bottom: 10px;*/
    border-radius: 5px;

    &:hover {
      opacity: .7;
    }
    &:focus,
    &:focus-visible,
    &:focus-within {
      .senators__name,
      .sSen__sName {
        color: $color-white;
      }
    }
  }

  &__sImgWrap {
    background-color: $color-gray-1;
    border-radius: 5px;
    padding-bottom: 141%;
    position: relative;
    display: block;
    @include margin-bottom(7px, 10px);
  }

  &__sImg {
    position: absolute;
    width: 100%;
    height: 100%;
    border-radius: 5px;
    top: 0;
    left: 0;
    background-size: cover;
    background-position: center;
    display: block;
  }

  &__sMask {
    position: absolute;
    right: -4px;
    top: -4px;
    font-family: $RobotoCondensed-Regular;
    font-size: 15px;
    text-transform: uppercase;
    color: $color-white;
    display: block;
    padding: 1px 7px;
    text-align: right;
    width: 34px;
    height: 34px;
    background: url('s-senators-img-mask-d.png') no-repeat;
    background-size: contain;

    &_r {
      background: url('s-senators-img-mask-r.png') no-repeat;
      background-size: contain;
    }

    &_d {
      background: url('s-senators-img-mask-d.png') no-repeat;
      background-size: contain;
    }
  }

  &__sMaskText {
    border-radius: 8px;
    display: inline-block;
    line-height: 1;
    min-width: 12px;
    text-align: center;
  }

  &__sMask_r &__sMaskText {
    background: $color-red;
  }

  &__sMask_d &__sMaskText {
    background: #32548b;
  }

  &__sDis {
    position: absolute;
    bottom: 0;
    left: -5px;
    right: -5px;
    display: block;
    background: $color-blue;
    text-transform: uppercase;
    font-family: $RobotoCondensed-Regular;
    font-size: 14px;
    border-radius: 5px;
    padding: 2px 0;
    color: $color-white;
  }

  &__sName {
    display: block;
    font-family: $RobotoCondensed-Regular;
    font-size: 15px;
    color: #1f2f4b;
    /*padding-bottom: 10px;*/
  }

  &__filRes {
    padding: 50px 75px 66px;
    background: #dedede;
    text-align: center;

    .bContainer {
      position: relative;
    }

    #{$this}__filIco {
      margin-bottom: 34px;
    }

    h2 {
      font-family: $RobotoCondensed-Regular;
      @include font-size(18px, 24px, 32px);
      margin: 0;
      color: $color-blue;
      text-transform: uppercase;
    }
  }

  &__btnBack {
    position: absolute;
    top: -36px;
    left: -67px;

    @include sm {
      top: auto;
      bottom: 0;
      left: 0;
    }
  }

  &__mSearch {
    font-size: 16px;
    text-align: center;
    padding-top: 40px;
  }


  input.ui-autocomplete {

    &-input {
      background: none;
    }
  }

  input.form-autocomplete.ui-autocomplete-loading {
    background: $color-white url('loader-1.gif') no-repeat 94% 50%;
  }
}

